# Rusty

./: .gitignore  Cargo.toml  Commit.sh  LICENSE  Makesrpm.sh  README.md  Rusty.spec
.makesrpm/: Makefile
src/: Rusty.rs  arithremetic.rs  somthing.rs
